--- a/MvcCv/Views/Proje/ProjeDetay.cshtml
+++ b/MvcCv/Views/Proje/ProjeDetay.cshtml
@@ -47,13 +47,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>                                       
-                    </ul>
-                    <form action="#" method="post" class="form-inline my-2 my-lg-0 header-search">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search here..." name="Search" required="">
-                        <button class="btn btn1 my-2 my-sm-0" type="submit">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </form>
+                    </ul>                   
                 </div>
             </nav>
 
@@ -109,54 +103,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <img src="@Model.ProjeResim2" class="img-fluid rounded-start">
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="card-body">                                        
-                                        <p class="card-text">@Model.ProjeResim2Açıklama</p>                                        
+                                    <div class="card-body">
+                                        <p class="card-text">@Model.ProjeResim2Açıklama</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="comment-top">
-                        <h4>Comments</h4>
-                        <div class="media">
-                            <img src="~/CoreBlogTema-main/web/images/t2.jpg" alt="" class="img-fluid" />
-                            <div class="media-body">
-                                <h5 class="mt-0">Joseph Goh</h5>
-                                <p>
-                                    Lorem Ipsum convallis diam consequat magna vulputate malesuada. id dignissim sapien velit id felis ac cursus eros.
-                                    Cras a ornare elit.
-                                </p>
-
-                                <div class="media mt-3">
-                                    <a class="d-flex pr-3" href="#">
-                                        <img src="~/CoreBlogTema-main/web/images/t2.jpg" alt="" class="img-fluid" />
-                                    </a>
-                                    <div class="media-body">
-                                        <h5 class="mt-0">Richard Spark</h5>
-                                        <p>
-                                            Lorem Ipsum convallis diam consequat magna vulputate malesuada. id dignissim sapien velit id felis ac cursus eros.
-                                            Cras a ornare elit.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="my-4 ">
+                            <div class="my-2">Projenin ilgili dosyalarına ve proje hakkında daha fazla bilgi için aşağıdaki github iconuna tıklayın.</div>
+                            <a href="@Model.ProjeLink"><i class="fab fa-github fa-3x text-secondary"></i></a>
+                            <span>Github Linki</span>
                         </div>
-                    </div>
-                    <div class="comment-top">
-                        <h4>Leave a Comment</h4>
-                        <div class="comment-bottom">
-                            <form action="#" method="post">
-                                <input class="form-control" type="text" name="Name" placeholder="Name" required="">
-                                <input class="form-control" type="email" name="Email" placeholder="Email" required="">
-
-                                <input class="form-control" type="text" name="Subject" placeholder="Subject" required="">
-
-                                <textarea class="form-control" name="Message" placeholder="Message..." required=""></textarea>
-                                <button type="submit" class="btn btn-primary submit">Submit</button>
-                            </form>
-                        </div>
-                    </div>
+                    </div>                 
                 </div>
 
                 <!--//left-->
