--- a/MvcCv/Views/Proje/ProjeEkle.cshtml
+++ b/MvcCv/Views/Proje/ProjeEkle.cshtml
@@ -13,7 +13,7 @@
     @Html.TextBoxFor(x => x.ProjeName, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.ProjeName, "", new { @style = "color:red" })
     <br />
-    @Html.Label("Proje Açıklama")    
+    @Html.Label("Proje Açıklama")
     @Html.TextAreaFor(x => x.ProjeAciklama, new { @class = "form-control", @rows = 4 })
     @Html.ValidationMessageFor(x => x.ProjeAciklama, "", new { @style = "color:red" })
     <br />
@@ -29,6 +29,9 @@
     <br />
     @Html.Label("Proje Resim 3")
     @Html.TextBoxFor(x => x.ProjeResim3Açıklama, new { @class = "form-control" })
+    <br />
+    @Html.Label("Proje Linki")
+    @Html.TextBoxFor(x => x.ProjeLink, new { @class = "form-control" })
     <br />
     @Html.Label("Tarih")
     @Html.TextBoxFor(x => x.Tarih, new { @class = "form-control" })
