--- a/MvcCv/Views/Proje/ProjeGetir.cshtml
+++ b/MvcCv/Views/Proje/ProjeGetir.cshtml
@@ -19,18 +19,19 @@
     @Html.ValidationMessageFor(x => x.ProjeName, "", new { @style = "color:red" })
     <br />
     @Html.Label("Proje Resim 1")
-    @Html.TextBoxFor(x => x.ProjeResim1, new { @class = "form-control" })
-    <img src="@Model.ProjeResim1" class="img-thumbnail w-25 my-1" />
+    @Html.TextBoxFor(x => x.ProjeResim1, new { @class = "form-control" })    
     <br />
     @Html.Label("Proje Resim 2")
-    @Html.TextBoxFor(x => x.ProjeResim2, new { @class = "form-control" })
-    <img src="@Model.ProjeResim2" class="img-thumbnail w-25 my-1" />
+    @Html.TextBoxFor(x => x.ProjeResim2, new { @class = "form-control" })    
     <br />
     @Html.Label("Proje Resim 2 Açıklama")
     @Html.TextAreaFor(x => x.ProjeResim2Açıklama, new { @class = "form-control", @rows = 2 })
     <br />
     @Html.Label("Proje Resim 3")
     @Html.TextBoxFor(x => x.ProjeResim3Açıklama, new { @class = "form-control" })
+    <br />
+    @Html.Label("Proje Linki")
+    @Html.TextBoxFor(x => x.ProjeLink, new { @class = "form-control" })
     <br />
     @Html.Label("Tarih")
     @Html.TextBoxFor(x => x.Tarih, new { @class = "form-control" })
