--- a/MvcCv/Views/ProjeMesaj/Index.cshtml
+++ b/MvcCv/Views/ProjeMesaj/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    string Durum = "";
+    string value = "";
 }
 
 <br />
@@ -22,17 +24,59 @@
                 </form>
             </div>
             <div id="collapse_@item.id" class="collapse" aria-labelledby="heading_@item.id" data-parent="#accordion">
-                @foreach (var mesaj in Model.mesaj)
-                {
-                    if (mesaj.ProjeId == item.id)
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th style="width: 10px">#</th>
+                            <th>Konu</th>
+                            <th>Mail</th>
+                            <th>İçerik</th>
+                            <th>Durum</th>
+                            <th>Ayarlar</th>
+                        </tr>
+                    </thead>
+                    @foreach (var mesaj in Model.mesaj)
                     {
-                        <div class="card-body">
-                             @mesaj.Icerik
-                            <a class="btn btn-primary ml-4 mb-2" href="/ProjeMesaj/YorumSil/@mesaj.Id/">Sil</a>
-                        </div>
+                        if (mesaj.ProjeId == item.id)
+                        {
+                            @*<div class="card-body">
+                                    @mesaj.Icerik
+                                    <a class="btn btn-primary ml-4 mb-2" href="/ProjeMesaj/YorumSil/@mesaj.Id">Sil</a>
+                                </div>*@
 
+                            <tr>
+                                <td>@mesaj.Id</td>
+                                <td>@mesaj.Konu</td>
+                                <td>@mesaj.Mail</td>
+                                <td>@mesaj.Icerik</td>
+                                @if (mesaj.Durum == true)
+                                {
+                                    <td class="text-success">Aktif</td>
+                                }
+                                else
+                                {
+                                    <td class="text-danger">Pasif</td>
+                                }
+                                <td>
+                                    @if (mesaj.Durum == true)
+                                    {
+                                        Durum = "btn-primary";
+                                        value = "Gizle";
+                                    }
+                                    else
+                                    {
+                                        Durum = "btn-warning ";
+                                        value = "Göster";
+                                    }
+                                    <a href="/ProjeMesaj/YorumSil/@mesaj.Id" class="btn @Durum btn-sm">
+                                        <i class="fas fa-pencil-alt"></i>
+                                        @value
+                                    </a>
+                                </td>
+                            </tr>
+                        }
                     }
-                }
+                </table>
             </div>
         </div>
     }
