--- a/MvcCv/Views/ProjeMesaj/_ProjeYorumlar.cshtml
+++ b/MvcCv/Views/ProjeMesaj/_ProjeYorumlar.cshtml
@@ -4,6 +4,7 @@
     <div class="comment-bottom">
         <form method="post">
             <input type="hidden" name="ProjeId" value="@ViewBag.projeid"/>
+            <input class="form-control text-dark" type="hidden" name="Durum" value="True">
             <input class="form-control text-dark" type="text" name="AdSoyad" placeholder="Ad Soyad" required="">
             <input class="form-control text-dark" type="email" name="Mail" placeholder="Email" required="">
 
